syntax = "proto3";
package payPb.v1;
option go_package="pay/api/qvbilam/pay/v1;payV1";

message CreateGoodsRequest {
  string type = 1;
  int64 id = 2;
  string name = 3;
  string icon = 4;
  float price = 5;
  int64 count = 6;
}

message CreateOrderRequest{
  int64 userId = 1;
  int64 count = 2;
  int64 delivery_id = 3;
  string pay_type = 4;
  string client_type = 5;
  string remark = 6;
  float Amount = 7;
  string subject = 8;
  repeated CreateGoodsRequest Goods = 9;
  string ext = 10;
}

message UpdateOrderRequest{
  int64 id = 1;
  string orderSn = 2;
  string tradeNo = 3;
  int64 deliveryId = 4;
  string status = 5;
  float payAmount = 6;
  string remark = 7;
  string payResult = 8;
  int64 payTime = 9;
  string ext = 10;
}

message OrderResponse {
  int64 userID = 1;
  string orderSn = 2;
  string tradeNo = 3;
  string payType = 4;
  string clientType = 5;
  float amount = 6;
  string subject = 7;
  string remark = 8;
  string payResult = 9;
  int64 payTime = 10;
  string ext = 11;
}


message PayNotifyResponse {
  bool isSuccess = 1;
  string message = 2;
}

message ApplyOrderRequest {
  string orderSn = 1;
  string payType = 2;
  string clientType = 3;
  int64 userID = 4;
}


service pay {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse); // 创建订单
  rpc ApplyOrder (ApplyOrderRequest) returns (OrderResponse); // 申请订单(支付前调用)
  rpc UpdateOrder (UpdateOrderRequest) returns (OrderResponse); // 修改订单状态
}